iac/listener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: listener-service
  namespace: event-listeners
spec:
  selector:
    app: listener
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5080
