iac/listener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: listener-ingress
  namespace: event-listeners
spec:
  ingressClassName: nginx
  rules:
    - host: event-listener.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: listener-service
                port:
                  number: 80
